--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,28 +7,28 @@
 
 # testing
 /coverage
-
-# next.js
-/.next/
-/out/
-
+/out
 # production
 /build
 
 # misc
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# vercel
-.vercel
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Custom
+dev.env
+.vscode/
+prod.env
+.env.production
+dev.env.local
+.env.local
+.env.dev
+.env.development
+.secrets/
