--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,14 +17,18 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "mixpanel-browser": "^2.41.0",
+    "moment": "^2.29.1",
     "next": "11.0.1",
     "react": "^17.0.2",
+    "react-calendly": "^2.2.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.9.2",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-query": "^3.18.1",
+    "react-showdown": "^2.3.0",
+    "react-split-pane": "^0.1.92",
     "showdown": "^1.9.1",
     "uuid": "^8.3.2"
   },
@@ -35,6 +39,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@testing-library/dom": "^7.31.2",
     "@types/react": "17.0.13",
+    "axios-mock-adapter": "^1.19.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
