--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.9.2",
+    "react-hubspot-form": "^1.3.7",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-query": "^3.18.1",
