--- a/backend/sample.env
+++ b/backend/sample.env
@@ -1,2 +1,4 @@
 export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to"
-export MOONSTREAM_OPENAPI_LIST=""
+export MOONSTREAM_OPENAPI_LIST="subscriptions"
+export MOONSTREAM_APPLICATION_ID="<issued_bugout_application_id>"
+export MOONSTREAM_DATA_JOURNAL_ID="<bugout_journal_id_to_store_blockchain_data>"
