--- a/crawlers/4byteCrawler/package.json
+++ b/crawlers/4byteCrawler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signature_crawler",
+  "name": "@bugout/4byteCrawler",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
