--- a/db/sample.env
+++ b/db/sample.env
@@ -1,2 +1,1 @@
-export EXPLORATION_DB_URI="<database_uri>"
-
+export EXPLORATION_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
