--- a/crawlers/sample.env
+++ b/crawlers/sample.env
@@ -1,3 +1,3 @@
 export MOONSTREAM_IPC_PATH=null
 export MOONSTREAM_CRAWL_WORKERS=4
-export MOONSTREAM_DB_URI="<moonstream_database_uri>"
+export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
