--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-query": "^3.18.1",
     "react-showdown": "^2.3.0",
     "react-split-pane": "^0.1.92",
+    "react-xarrows": "^2.0.2",
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.8",
     "uuid": "^8.3.2"
