--- a/backend/sample.env
+++ b/backend/sample.env
@@ -2,3 +2,4 @@ export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream
 export MOONSTREAM_OPENAPI_LIST="users,subscriptions"
 export MOONSTREAM_APPLICATION_ID="<issued_bugout_application_id>"
 export MOONSTREAM_DATA_JOURNAL_ID="<bugout_journal_id_to_store_blockchain_data>"
+export MOONSTREAM_AUTO_USER_TOKEN="<Access token to application resources>"
