Bugout client spire and brood url env vars

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -4,5 +4,6 @@ export MOONSTREAM_APPLICATION_ID="<issued_bugout_application_id>"
 export MOONSTREAM_DATA_JOURNAL_ID="<bugout_journal_id_to_store_blockchain_data>"
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_POOL_SIZE=0
-export MOONSTREAM_AUTO_USER_TOKEN="<Access token to application resources>"
-
+export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Access token to application resources>"
+export BUGOUT_BROOD_URL="https://auth.bugout.dev"
+export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
