--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "mixpanel-browser": "^2.41.0",
     "moment": "^2.29.1",
     "next": "11.0.1",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-calendly": "^2.2.1",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.9.2",
