Run frontend tests even on pull requests from forks

--- a/.github/workflows/lint.frontend.yml
+++ b/.github/workflows/lint.frontend.yml
@@ -4,6 +4,11 @@ on:
   push:
     paths:
       - "frontend/**"
+  pull_request:
+    branches:
+      - "main"
+    paths:
+      - "frontend/**"
 
 jobs:
   build:
