--- a/.github/workflows/lint.crawlers.yml
+++ b/.github/workflows/lint.crawlers.yml
@@ -19,7 +19,7 @@ jobs:
         run: pip install -e .[dev]
       # - name: Mypy type check
       #   working-directory: ./crawlers
-      #   run: mypy moonstreamcrawlers/
+      #   run: mypy mooncrawl/
       - name: Black syntax check
         working-directory: ./crawlers
-        run: black --check moonstreamcrawlers/
+        run: black --check mooncrawl/
