"ethcrawler trending": default start, end

--- a/crawlers/deploy/ethereum-trending.service
+++ b/crawlers/deploy/ethereum-trending.service
@@ -8,4 +8,4 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers
 EnvironmentFile=/home/ubuntu/mooncrawl-secrets/app.env
-ExecStart=/usr/bin/bash -c '/home/ubuntu/mooncrawl-env/bin/python -m mooncrawl.ethcrawler trending -s $(date -u -d '-2 hours' +%Y%m%d-%H%MT%z) -e $(date -u +%Y%m%d-%H%MT%z)'
+ExecStart=/usr/bin/bash -c '/home/ubuntu/mooncrawl-env/bin/python -m mooncrawl.ethcrawler trending'
