--- a/crawlers/sample.env
+++ b/crawlers/sample.env
@@ -3,3 +3,4 @@ export MOONSTREAM_IPC_PATH=null
 export MOONSTREAM_CRAWL_WORKERS=4
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_HUMBUG_TOKEN="<Token for crawlers store data via Humbug>"
+export COINMARKETCAP_API_KEY="<API key to parse conmarketcap>"
