--- a/crawlers/sample.env
+++ b/crawlers/sample.env
@@ -3,7 +3,7 @@ export MOONSTREAM_IPC_PATH=null
 export MOONSTREAM_CRAWL_WORKERS=4
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 
-export ETH_SCAN_TOKEN="TOKEN"
+export MOONSTREAM_ETHERSCAN_TOKEN="TOKEN"
 export AWS_S3_SMARTCONTRACT_BUCKET=""
 export AWS_S3_SMARTCONTRACT_BUCKET_CONTRACT_PREFIX=""
 export MOONSTREAM_HUMBUG_TOKEN="<Token for crawlers store data via Humbug>"
