--- a/.github/workflows/lint.crawlers.yml
+++ b/.github/workflows/lint.crawlers.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           python-version: "3.8"
       - name: Install test requirements
-        working-directory: ./crawlers
+        working-directory: ./crawlers/mooncrawl
         run: pip install -e .[dev]
       # - name: Mypy type check
       #   working-directory: ./crawlers
       #   run: mypy mooncrawl/
       - name: Black syntax check
-        working-directory: ./crawlers
+        working-directory: ./crawlers/mooncrawl
         run: black --check mooncrawl/
