--- a/.github/workflows/lint.backend.yml
+++ b/.github/workflows/lint.backend.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Install test requirements
         working-directory: ./backend
         run: pip install -r requirements.txt
-      # - name: Mypy type check
-      #   working-directory: ./backend
-      #   run: mypy moonstream/
+      - name: Mypy type check
+        working-directory: ./backend
+        run: mypy moonstream/
       - name: Black syntax check
         working-directory: ./backend
         run: black --check moonstream/
