--- a/.github/workflows/lint.crawlers.yml
+++ b/.github/workflows/lint.crawlers.yml
@@ -20,7 +20,7 @@ jobs:
         working-directory: ./crawlers/mooncrawl
         run: pip install -e .[dev]
       - name: Mypy type check
-        working-directory: ./crawlers
+        working-directory: ./crawlers/mooncrawl
         run: mypy mooncrawl/
       - name: Black syntax check
         working-directory: ./crawlers/mooncrawl
