--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,7 @@ six==1.16.0
 starlette==0.14.2
 toml==0.10.2
 tomli==1.0.4
+types-python-dateutil==0.1.6
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 uvicorn==0.14.0
