Renamed env variable for crash reports token

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -8,4 +8,4 @@ export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Access token to application resources>"
 export AWS_S3_SMARTCONTRACT_BUCKET="<AWS S3 bucket to store smart contracts>"
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
-export BUGOUT_HUMBUG_TOKEN="<Bugout Humbug token for crash reports>"
+export HUMBUG_REPORTER_BACKEND_TOKEN="<Bugout Humbug token for crash reports>"
