Humbug crash reporter for moonstream crawlers

--- a/crawlers/ethtxpool/sample.env
+++ b/crawlers/ethtxpool/sample.env
@@ -1,2 +1,3 @@
 export ETHTXPOOL_HUMBUG_CLIENT_ID="<client id for the crawling machine>"
 export ETHTXPOOL_HUMBUG_TOKEN="<Generate an integration and a Humbug token from https://bugout.dev/account/teams>"
+export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
