--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,5 +29,6 @@ toml==0.10.2
 tomli==1.0.4
 types-python-dateutil==0.1.6
 typing-extensions==3.10.0.0
+types-requests==2.25.6
 urllib3==1.26.6
 uvicorn==0.14.0
