Add changes for subscription and merge main.

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -5,6 +5,7 @@ export MOONSTREAM_DATA_JOURNAL_ID="<bugout_journal_id_to_store_blockchain_data>"
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_POOL_SIZE=0
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Access token to application resources>"
-export AWS_S3_SMARTCONTRACT_BUCKET=""
+export AWS_S3_SMARTCONTRACT_BUCKET="<AWS S3 bucket to store smart contracts>"
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
+export HUMBUG_REPORTER_BACKEND_TOKEN="<Bugout Humbug token for crash reports>"
