--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ fastapi==0.66.0
 h11==0.12.0
 idna==3.2
 jmespath==0.10.0
+humbug==0.2.7
 -e git+https://git@github.com/bugout-dev/moonstream.git@94135b054cabb9dc11b0a2406431619279979469#egg=moonstreamdb&subdirectory=db
 mypy==0.910
 mypy-extensions==0.4.3
@@ -28,5 +29,6 @@ toml==0.10.2
 tomli==1.0.4
 types-python-dateutil==0.1.6
 typing-extensions==3.10.0.0
+types-requests==2.25.6
 urllib3==1.26.6
 uvicorn==0.14.0
