--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@nivo/bar": "^0.73.1",
     "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
     "focus-visible": "^5.2.0",
