--- a/db/deploy/moonstreamdb.service
+++ b/db/deploy/moonstreamdb.service
@@ -6,7 +6,7 @@ After=network.target
 User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/db/server
-ExecStart=moonstreamdb
+ExecStart=/home/ubuntu/moonstream/db/server/moonstreamdb
 SyslogIdentifier=moonstreamdb
 
 [Install]
