--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@nivo/bar": "^0.73.1",
+    "@nivo/core": "^0.73.0",
     "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
     "focus-visible": "^5.2.0",
