--- a/.github/workflows/test.clients.python.yml
+++ b/.github/workflows/test.clients.python.yml
@@ -33,4 +33,6 @@ jobs:
         run: |
           CLIENT_VERSION=$(python -c "from moonstream.client import CLIENT_VERSION; print(CLIENT_VERSION)")
           SETUP_PY_VERSION=$(python setup.py --version)
+          echo "Client version: $CLIENT_VERSION"
+          echo "setup.py version: $SETUP_PY_VERSION"
           test "$CLIENT_VERSION" = "$SETUP_PY_VERSION"
