--- a/crawlers/mooncrawl/requirements.txt
+++ b/crawlers/mooncrawl/requirements.txt
@@ -6,6 +6,7 @@ bitarray==1.2.2
 black==21.8b0
 boto3==1.18.40
 botocore==1.21.40
+bugout==0.1.17
 certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.0.4
