--- a/crawlers/deploy/ethereum-nft.service
+++ b/crawlers/deploy/ethereum-nft.service
@@ -8,4 +8,4 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/mooncrawl-secrets/app.env
-ExecStart=/usr/bin/bash -c '/home/ubuntu/mooncrawl-env/bin/python -m mooncrawl.nft.cli ethereum sync'
+ExecStart=/usr/bin/bash -c '/home/ubuntu/mooncrawl-env/bin/python -m mooncrawl.nft.cli ethereum synchronize'
