--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -7,3 +7,5 @@ export AWS_S3_SMARTCONTRACT_BUCKET="<AWS S3 bucket for smart contracts>"
 export MOONSTREAM_HUMBUG_TOKEN="<Token for crawlers store data via Humbug>"
 export COINMARKETCAP_API_KEY="<API key to parse conmarketcap>"
 export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
+export MOONSTREAM_DATA_JOURNAL_ID="<Bugout journal id for moonstream>"
+export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Bugout access token for moonstream>"
