--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -9,3 +9,4 @@ export COINMARKETCAP_API_KEY="<API key to parse conmarketcap>"
 export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
 export MOONSTREAM_DATA_JOURNAL_ID="<Bugout journal id for moonstream>"
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Bugout access token for moonstream>"
+export NFT_HUMBUG_TOKEN="<Token for nft crawler>"
