--- a/datasets/nfts/sample.env
+++ b/datasets/nfts/sample.env
@@ -1,2 +1,2 @@
-export MOONSTREAM_DB_URI=""
-export MOONSTREAM_IPC_PATH=null
+export MOONSTREAM_DB_URI="<connection string for Moonstream database>"
+export MOONSTREAM_WEB3_PROVIDER="<URL for HTTP provider or filesystem path for IPC provider>"
