--- a/db/deploy/moonstreamdb.service
+++ b/db/deploy/moonstreamdb.service
@@ -6,7 +6,8 @@ After=network.target
 User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/db/server
-ExecStart=/home/ubuntu/moonstream/db/server/moonstreamdb
+EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
+ExecStart=/home/ubuntu/moonstream/db/server/moonstreamdb -host 0.0.0.0 -port "${MOONSTREAM_DB_SERVER_PORT}"
 SyslogIdentifier=moonstreamdb
 
 [Install]
