Add ETHTXPOOL_HUMBUG_CLIENT_ID as env variable for escape desynchronize with crawler.

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -9,3 +9,4 @@ export AWS_S3_SMARTCONTRACT_BUCKET="<AWS S3 bucket to store smart contracts>"
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
 export HUMBUG_REPORTER_BACKEND_TOKEN="<Bugout Humbug token for crash reports>"
+export ETHTXPOOL_HUMBUG_CLIENT_ID="<Bugout Humbug client id for txpool transactions in journal>"
