Scratch of status page

--- a/frontend/sample.env
+++ b/frontend/sample.env
@@ -1,3 +1,4 @@
 export NEXT_PUBLIC_MIXPANEL_TOKEN="<YOUR MIXPANEL TOKEN HERE>"
 export NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="<stripe publishable key>"
-export NEXT_PUBLIC_MOONSTREAM_API_URL=http://localhost:7481
+export NEXT_PUBLIC_MOONSTREAM_API_URL="http://localhost:7481"
+export NEXT_PUBLIC_MOONSTREAM_DB_URL="http://localhost:5432"
