--- a/db/server/sample.env
+++ b/db/server/sample.env
@@ -1,2 +1,3 @@
 export MOONSTREAM_DB_SERVER_PORT="8080"
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
+export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://www.moonstream.to,https://alpha.moonstream.to"
