--- a/crawlers/deploy/ethereum-node.service
+++ b/crawlers/deploy/ethereum-node.service
@@ -7,9 +7,10 @@ User=ubuntu
 Group=www-data
 ExecStart=/usr/bin/geth --syncmode full \
     --port 41381 --datadir /mnt/disks/nodes/ethereum \
-    --txpool.globalslots 450000 --txpool.globalqueue 50000 \
+    --txpool.globalslots 153600 --txpool.globalqueue 30720 \
     --http --http.port 18375 --http.api eth,web3,txpool
 ExecStop=/bin/kill -s SIGINT -$MAINPID
+TimeoutStopSec=300
 SyslogIdentifier=ethereum-node
 
 [Install]
