Initial version, moved modals to modal provider

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.3.0",
     "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
+    "color": "^4.0.1",
+    "downshift": "^6.1.7",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4.1.17",
     "mixpanel-browser": "^2.41.0",
