Retrieving ip from route53

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -4,7 +4,8 @@ export MOONSTREAM_DATA_JOURNAL_ID="<bugout_journal_id_to_store_blockchain_data>"
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_POOL_SIZE=0
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Access token to application resources>"
-export MOONSTREAM_ETHEREUM_WEB3_PROVIDER="<Connection path to ethereum node>"
+export MOONSTREAM_INTERNAL_HOSTED_ZONE_ID="<moonstream_hosted_zone_id>"
+export MOONSTREAM_ETHEREUM_WEB3_PROVIDER_URI="<connection_path_uri_to_ethereum_node>"
 export AWS_S3_SMARTCONTRACT_BUCKET="<AWS S3 bucket to store smart contracts>"
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
