--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "next": "11.0.1",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-calendly": "^2.2.1",
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.2",
