--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@nivo/core": "^0.73.0",
     "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
+    "core-js": "^3.19.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4.1.17",
     "mixpanel-browser": "^2.41.0",
+    "mobx": "^6.3.6",
     "moment": "^2.29.1",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
@@ -39,9 +41,11 @@
     "react-slick": "^0.28.1",
     "react-split-pane": "^0.1.92",
     "react-xarrows": "^2.0.2",
+    "redoc": "^2.0.0-rc.57",
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.8",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "web3": "^1.5.2"
   },
