--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -1,5 +1,6 @@
 # Path to IPC socket to use for web3 connections
-export MOONSTREAM_IPC_PATH=null
+export MOONSTREAM_NODE_ETHEREUM_IPC_ADDR="127.0.0.1"
+export MOONSTREAM_NODE_ETHEREUM_IPC_PORT="8545"
 export MOONSTREAM_CRAWL_WORKERS=4
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_ETHERSCAN_TOKEN="<Token for etherscan>"
