web3 breaks nextjs , using web3-utils to bypass

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.8",
     "uuid": "^8.3.2",
-    "web3": "^1.6.0"
+    "web3-utils": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
