--- a/crawlers/mooncrawl/requirements.txt
+++ b/crawlers/mooncrawl/requirements.txt
@@ -27,6 +27,7 @@ idna==3.2
 ipfshttpclient==0.8.0a2
 jmespath==0.10.0
 jsonschema==3.2.0
+isort==5.10.0
 lru-dict==1.1.7
 multiaddr==0.0.9
 multidict==5.1.0
