--- a/.github/workflows/lint.backend.yml
+++ b/.github/workflows/lint.backend.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
+      - name: Upgrade pip and setuptools
+        run: pip install --upgrade pip setuptools
       - name: Install test requirements
         working-directory: ./backend
         run: pip install -r requirements.txt
