--- a/backend/deploy/moonstreamapi.service
+++ b/backend/deploy/moonstreamapi.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=moonstream-service
+Description=moonstreamapi-service
 After=network.target
 
 [Service]
@@ -7,8 +7,8 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/backend
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/uvicorn --host 0.0.0.0 --port 7481 --workers 8 moonstream.api:app
-SyslogIdentifier=moonstream
+ExecStart=/home/ubuntu/moonstream-env/bin/uvicorn --host 0.0.0.0 --port 7481 --workers 8 moonstreamapi.api:app
+SyslogIdentifier=moonstreamapi
 
 [Install]
 WantedBy=multi-user.target
