--- a/.github/workflows/lint.backend.yml
+++ b/.github/workflows/lint.backend.yml
@@ -20,7 +20,7 @@ jobs:
         run: pip install --upgrade pip setuptools
       - name: Install test requirements
         working-directory: ./backend
-        run: pip install -r requirements.txt
+        run: pip install -e .[dev]
       - name: Mypy type check
         working-directory: ./backend
         run: mypy moonstreamapi/
