--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@nivo/bar": "^0.74.0",
+    "@nivo/core": "^0.74.0",
+    "@nivo/line": "^0.74.0",
     "@stripe/stripe-js": "^1.16.0",
     "axios": "^0.21.1",
     "color": "^4.0.1",
-    "downshift": "^6.1.7",
     "core-js": "^3.19.1",
+    "downshift": "^6.1.7",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4.1.17",
     "mixpanel-browser": "^2.41.0",
@@ -45,10 +48,10 @@
     "redoc": "^2.0.0-rc.57",
     "showdown": "^1.9.1",
     "showdown-highlight": "^2.1.8",
-    "uuid": "^8.3.2",
-    "web3-utils": "^1.6.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
+    "web3-utils": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
