--- a/nodes/deploy/ethereum/geth.service
+++ b/nodes/deploy/ethereum/geth.service
@@ -5,11 +5,14 @@ After=network.target
 [Service]
 User=ubuntu
 Group=www-data
-EnvironmentFile=/home/ubuntu/moonstream-secrets/node.env
+EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 ExecStart=/usr/bin/geth --syncmode snap --cache 4096 \
-    --port "${MOONSTREAM_NODE_ETHEREUM_LISTENING_PORT}" --datadir /mnt/disks/nodes/ethereum \
+    --port "${MOONSTREAM_NODE_ETHEREUM_LISTENING_PORT}" \
+    --datadir /mnt/disks/nodes/ethereum \
     --txpool.globalslots 153600 --txpool.globalqueue 3072 \
-    --http --http.addr "${MOONSTREAM_NODE_ETHEREUM_IPC_ADDR}" --http.port "${MOONSTREAM_NODE_ETHEREUM_IPC_PORT}" --http.api eth,web3,txpool
+    --http --http.api eth,web3,txpool \
+    --http.addr "${MOONSTREAM_NODE_ETHEREUM_IPC_ADDR}" \
+    --http.port "${MOONSTREAM_NODE_ETHEREUM_IPC_PORT}"
 ExecStop=/bin/kill -s SIGINT -$MAINPID
 TimeoutStopSec=300
 SyslogIdentifier=ethereum-node
