--- a/nodes/deploy/ethereum/moonstreamnodes.service
+++ b/nodes/deploy/ethereum/moonstreamnodes.service
@@ -7,7 +7,7 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/nodes/server
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream/nodes/server/moonstreamnodes -blockchain ethereum -host 0.0.0.0 -port "${MOONSTREAM_NODES_SERVER_PORT}"
+ExecStart=/home/ubuntu/moonstream/nodes/server/moonstreamnodes -blockchain ethereum -host "${MOONSTREAM_NODE_ETHEREUM_IPC_ADDR}" -port "${MOONSTREAM_NODES_SERVER_PORT}"
 SyslogIdentifier=moonstreamnodes
 
 [Install]
