--- a/nodes/deploy/polygon/moonstreamnodes.service
+++ b/nodes/deploy/polygon/moonstreamnodes.service
@@ -7,7 +7,7 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/nodes/server
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream/nodes/server/moonstreamnodes -blockchain polygon -host 0.0.0.0 -port "${MOONSTREAM_NODES_SERVER_PORT}"
+ExecStart=/home/ubuntu/moonstream/nodes/server/moonstreamnodes -blockchain polygon -host "${MOONSTREAM_NODE_POLYGON_IPC_ADDR}" -port "${MOONSTREAM_NODES_SERVER_PORT}"
 SyslogIdentifier=moonstreamnodes
 
 [Install]
