Service files for stats_worker.dashboard generate command

--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -1,5 +1,6 @@
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
+export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://www.moonstream.to"
 export MOONSTREAM_NODE_ETHEREUM_IPC_ADDR="127.0.0.1"
 export MOONSTREAM_NODE_ETHEREUM_IPC_PORT="8545"
 export MOONSTREAM_NODE_POLYGON_IPC_ADDR="127.0.0.1"
@@ -8,6 +9,7 @@ export MOONSTREAM_CRAWL_WORKERS=4
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_ETHERSCAN_TOKEN="<Token for etherscan>"
 export AWS_S3_SMARTCONTRACT_BUCKET="<AWS S3 bucket for smart contracts>"
+export MOONSTREAM_S3_SMARTCONTRACTS_ABI_PREFIX="<Previx for AWS S3 bucket (prod,dev,..)>"
 export MOONSTREAM_HUMBUG_TOKEN="<Token for crawlers store data via Humbug>"
 export COINMARKETCAP_API_KEY="<API key to parse conmarketcap>"
 export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
