update sample env

--- a/frontend/sample.env
+++ b/frontend/sample.env
@@ -3,3 +3,8 @@ export NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="<stripe publishable key>"
 export NEXT_PUBLIC_MOONSTREAM_API_URL="<moonstream_api_url>"
 export NEXT_PUBLIC_MOONSTREAM_ETHEREUM_CLUSTER_URL="<moonstream_crawlers_url>"
 export NEXT_PUBLIC_MOONSTREAM_DB_URL="<moonstream_db_url>"
+export NEXT_PUBLIC_SIMIOTICS_AUTH_URL=https://auth.bugout.dev
+export NEXT_PUBLIC_SIMIOTICS_JOURNALS_URL=https://spire.bugout.dev
+export NEXT_PUBLIC_FRONTEND_VERSION="<frontend_version_number>"%
+
+
