--- a/db/configs/sample.env
+++ b/db/configs/sample.env
@@ -1,2 +1,3 @@
+# Required environment variables to work with database CLI
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_POOL_SIZE=0
