--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8-slim-buster
 # Update packages and
 # prepare alembic for docker compose setup
 RUN apt-get update && \
-    apt-get install -y libpq-dev gcc && \
+    apt-get install -y libpq-dev gcc curl && \
     rm -rf /var/lib/apt/lists/* && \
     pip3 install --no-cache-dir --upgrade pip setuptools && \
     pip3 install --no-cache-dir psycopg2-binary alembic
