Update sample env.

--- a/backend/sample.env
+++ b/backend/sample.env
@@ -13,3 +13,4 @@ export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
 export HUMBUG_REPORTER_BACKEND_TOKEN="<Bugout Humbug token for crash reports>"
 export ETHTXPOOL_HUMBUG_CLIENT_ID="<Bugout Humbug client id for txpool transactions in journal>"
+export MOONSTREAM_MOONWORM_TASKS_JOURNAL="<Bugout journal with tasks for moonworm>"
