Fix view filters.

--- a/backend/configs/sample.env
+++ b/backend/configs/sample.env
@@ -6,6 +6,7 @@ export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
 export MOONSTREAM_APPLICATION_ID="<issued_bugout_application_id>"
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Access_token_to_application_resources>"
 export MOONSTREAM_POOL_SIZE=0
+export MOONSTREAM_MOONWORM_TASKS_JOURNAL="<Bugout journal with tasks for moonworm>"
 
 # Blockchain, txpool, whalewatch data depends variables
 export MOONSTREAM_DATA_JOURNAL_ID="<bugout_journal_id_to_store_blockchain_data>"
