Returned back state of package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --hostname 127.0.0.1",
+    "dev": "next dev",
     "build": "next build && next export -o build",
     "start": "next start",
     "lint": "eslint ./ --ext js,jsx,ts,tsx --fix",
