--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -16,3 +16,4 @@ export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
 export MOONSTREAM_DATA_JOURNAL_ID="<Bugout journal id for moonstream>"
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Bugout access token for moonstream>"
 export NFT_HUMBUG_TOKEN="<Token for nft crawler>"
+export MOONSTREAM_MOONWORM_TASKS_JOURNAL="<journal_with_tasks_for_moonworm_crawler>"
