--- a/crawlers/txpool/sample.env
+++ b/crawlers/txpool/sample.env
@@ -1,7 +1,5 @@
-export MOONSTREAM_NODE_ETHEREUM_IPC_ADDR="127.0.0.1"
-export MOONSTREAM_NODE_ETHEREUM_IPC_PORT="8545"
-export MOONSTREAM_NODE_POLYGON_IPC_ADDR="127.0.0.1"
-export MOONSTREAM_NODE_POLYGON_IPC_PORT="8545"
+export MOONSTREAM_ETHEREUM_WEB3_PROVIDER_URI="https://<connection_path_uri_to_ethereum_node>"
+export MOONSTREAM_POLYGON_WEB3_PROVIDER_URI="https://<connection_path_uri_to_polygon_node>"
 export HUMBUG_TXPOOL_CLIENT_ID="<client id for the crawling machine>"
 export HUMBUG_TXPOOL_TOKEN="<Generate an integration and a Humbug token from https://bugout.dev/account/teams>"
 export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
