--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -1,10 +1,8 @@
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
 export MOONSTREAM_CORS_ALLOWED_ORIGINS="http://localhost:3000,https://moonstream.to,https://www.moonstream.to"
-export MOONSTREAM_NODE_ETHEREUM_IPC_ADDR="127.0.0.1"
-export MOONSTREAM_NODE_ETHEREUM_IPC_PORT="8545"
-export MOONSTREAM_NODE_POLYGON_IPC_ADDR="127.0.0.1"
-export MOONSTREAM_NODE_POLYGON_IPC_PORT="8545"
+export MOONSTREAM_ETHEREUM_WEB3_PROVIDER_URI="https://<connection_path_uri_to_ethereum_node>"
+export MOONSTREAM_POLYGON_WEB3_PROVIDER_URI="https://<connection_path_uri_to_polygon_node>"
 export MOONSTREAM_CRAWL_WORKERS=4
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_ETHERSCAN_TOKEN="<Token for etherscan>"
