--- a/nodes/deploy/ethereum/geth.service
+++ b/nodes/deploy/ethereum/geth.service
@@ -11,7 +11,8 @@ ExecStart=/usr/bin/geth --syncmode snap --cache 4096 \
     --txpool.globalslots 153600 --txpool.globalqueue 3072 \
     --http --http.api eth,web3,txpool \
     --http.addr "${AWS_LOCAL_IPV4}" \
-    --http.port 8545
+    --http.port 8545 \
+    --http.vhosts "*"
 ExecStop=/bin/kill -s SIGINT -$MAINPID
 TimeoutStopSec=300
 SyslogIdentifier=geth
