--- a/nodes/deploy/polygon/node-status.service
+++ b/nodes/deploy/polygon/node-status.service
@@ -7,7 +7,10 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/nodes/server
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream/nodes/server/nodestatus -blockchain polygon -host "${AWS_LOCAL_IPV4}" -port 8734
+ExecStart=/home/ubuntu/moonstream/nodes/server/nodestatus \
+    -blockchain polygon \
+    -host "${AWS_LOCAL_IPV4}" \
+    -port "${MOONSTREAM_NODES_SERVER_PORT}"
 SyslogIdentifier=node-status
 
 [Install]
