--- a/nodes/deploy/ethereum/node-status.service
+++ b/nodes/deploy/ethereum/node-status.service
@@ -8,7 +8,7 @@ Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/nodes/server
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 ExecStart=/home/ubuntu/moonstream/nodes/server/nodestatus \
-    -blockchain polygon \
+    -blockchain ethereum \
     -host "${AWS_LOCAL_IPV4}" \
     -port "${MOONSTREAM_NODES_SERVER_PORT}"
 SyslogIdentifier=node-status
