--- a/crawlers/deploy/polygon-missing.service
+++ b/crawlers/deploy/polygon-missing.service
@@ -8,4 +8,6 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks missing --blockchain polygon -n
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler \
+    --client-id "polygon-missing" \
+    blocks missing --blockchain polygon -n
