--- a/crawlers/deploy/polygon-moonworm-crawler.service
+++ b/crawlers/deploy/polygon-moonworm-crawler.service
@@ -11,7 +11,9 @@ WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 Restart=on-failure
 RestartSec=15s
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli crawl -b polygon
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.moonworm_crawler.cli \
+    --client-id "polygon-moonworm-crawler" \
+    crawl -b polygon
 SyslogIdentifier=polygon-moonworm-crawler
 
 [Install]
