--- a/nodes/deploy/ethereum/geth.service
+++ b/nodes/deploy/ethereum/geth.service
@@ -17,7 +17,7 @@ ExecStart=/usr/bin/geth --syncmode snap --cache 4096 \
     --http.vhosts "*"
 Type=simple
 User=ubuntu
-KillSignal=SIGINT
+ExecStop=/bin/kill -s SIGINT -$MAINPID
 TimeoutStopSec=180
 SyslogIdentifier=geth
 
