--- a/nodes/deploy/polygon/bor.service
+++ b/nodes/deploy/polygon/bor.service
@@ -36,7 +36,7 @@ ExecStart=/home/ubuntu/go/bin/bor --datadir "${MOUNT_DATA_DIR}/.bor/data" \
     --bootnodes "${BOR_BOOTNODES}"
 Type=simple
 User=ubuntu
-KillSignal=SIGINT
+ExecStop=/bin/kill -s SIGINT -$MAINPID
 TimeoutStopSec=180
 SyslogIdentifier=bor
 
