--- a/nodes/node_balancer/sample.env
+++ b/nodes/node_balancer/sample.env
@@ -5,6 +5,9 @@ export BUGOUT_INTERNAL_CRAWLERS_USER_ID="<application_user_id_of_moonstream_inte
 export MOONSTREAM_NODES_SERVER_PORT="<node_status_server_port>"
 export HUMBUG_REPORTER_NODE_BALANCER_TOKEN="<bugout_humbug_token_for_crash_reports>"
 
+# Database variables
+export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
+
 # Ethereum nodes depends variables
 export MOONSTREAM_NODE_ETHEREUM_A_IPC_ADDR="<node_geth_http_ip_addr>"
 export MOONSTREAM_NODE_ETHEREUM_B_IPC_ADDR="<node_geth_http_ip_addr>"
