--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -6,14 +6,15 @@ export MOONSTREAM_POLYGON_WEB3_PROVIDER_URI="https://<connection_path_uri_to_pol
 export MOONSTREAM_CRAWL_WORKERS=4
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 export MOONSTREAM_DB_URI_READ_ONLY="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
-export MOONSTREAM_ETHERSCAN_TOKEN="<Token for etherscan>"
-export MOONSTREAM_S3_SMARTCONTRACTS_BUCKET="<AWS S3 bucket for smart contracts>"
-export MOONSTREAM_S3_SMARTCONTRACTS_ABI_PREFIX="<Previx for AWS S3 bucket (prod,dev,..)>"
-export MOONSTREAM_HUMBUG_TOKEN="<Token for crawlers store data via Humbug>"
-export COINMARKETCAP_API_KEY="<API key to parse conmarketcap>"
-export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout Humbug token for crash reports>"
-export MOONSTREAM_DATA_JOURNAL_ID="<Bugout journal id for moonstream>"
-export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Bugout access token for moonstream>"
-export NFT_HUMBUG_TOKEN="<Token for nft crawler>"
+export MOONSTREAM_ETHERSCAN_TOKEN="<Token_for_etherscan>"
+export MOONSTREAM_S3_SMARTCONTRACTS_BUCKET="<AWS_S3_bucket_for_smart_contracts>"
+export MOONSTREAM_S3_SMARTCONTRACTS_ABI_PREFIX="<Previx_for_AWS_S3_bucket_(prod,dev,..)>"
+export MOONSTREAM_HUMBUG_TOKEN="<Token_for_crawlers_store_data_via_Humbug>"
+export COINMARKETCAP_API_KEY="<API_key_to_parse_conmarketcap>"
+export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout_Humbug_token_for_crash_reports>"
+export MOONSTREAM_DATA_JOURNAL_ID="<Bugout_journal_id_for_moonstream>"
+export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Bugout_access_token_for_moonstream>"
+export NFT_HUMBUG_TOKEN="<Token_for_nft_crawler>"
 export MOONSTREAM_MOONWORM_TASKS_JOURNAL="<journal_with_tasks_for_moonworm_crawler>"
-export MOONSTREAM_QUERIES_BUCKET="<bucket for queries data>"
+export MOONSTREAM_S3_QUERIES_BUCKET="<AWS_S3_bucket_to_store_sql_queries>"
+export MOONSTREAM_S3_QUERIES_BUCKET_PREFIX="dev"
