Working nodebalancer with authorization via resources

--- a/nodes/node_balancer/sample.env
+++ b/nodes/node_balancer/sample.env
@@ -1,17 +1,20 @@
 # Required environment variables for load balancer
 export BUGOUT_AUTH_URL="https://auth.bugout.dev"
-export BUGOUT_NODE_BALANCER_APPLICATION_ID="<application_id_to_controll_access>"
-export BUGOUT_INTERNAL_CRAWLERS_USER_ID="<application_user_id_of_moonstream_internal_crawlers>"
-export MOONSTREAM_NODES_SERVER_PORT="<node_status_server_port>"
-export HUMBUG_REPORTER_NODE_BALANCER_TOKEN="<bugout_humbug_token_for_crash_reports>"
+export NODE_BALANCER_APPLICATION_ID="<application_id_to_controll_access>"
+export NODE_BALANCER_CONTROLLER_TOKEN="<token_of_controller_user>"
+export NODE_BALANCER_CONTROLLER_ACCESS_ID="<controller_access_id_for_internal_crawlers>"
 
 # Database variables
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
 
+# Nodes
+export MOONSTREAM_NODES_SERVER_PORT="<node_status_server_port>"
 # Ethereum nodes depends variables
-export MOONSTREAM_NODE_ETHEREUM_A_IPC_ADDR="<node_geth_http_ip_addr>"
-export MOONSTREAM_NODE_ETHEREUM_B_IPC_ADDR="<node_geth_http_ip_addr>"
-
+export MOONSTREAM_NODE_ETHEREUM_A_IPC_ADDR="127.0.0.1"
+export MOONSTREAM_NODE_ETHEREUM_B_IPC_ADDR="127.0.0.2"
 # Polygon nodes depends variables
-export MOONSTREAM_NODE_POLYGON_A_IPC_ADDR="<node_bor_http_ip_addr>"
-export MOONSTREAM_NODE_POLYGON_B_IPC_ADDR="<node_bor_http_ip_addr>"
+export MOONSTREAM_NODE_POLYGON_A_IPC_ADDR="127.0.0.1"
+export MOONSTREAM_NODE_POLYGON_B_IPC_ADDR="127.0.0.2"
+
+# Error humbug reporter
+export HUMBUG_REPORTER_NODE_BALANCER_TOKEN="<bugout_humbug_token_for_crash_reports>"
