--- a/nodes/node_balancer/sample.env
+++ b/nodes/node_balancer/sample.env
@@ -1,8 +1,8 @@
 # Required environment variables for load balancer
 export BUGOUT_AUTH_URL="https://auth.bugout.dev"
-export NODE_BALANCER_APPLICATION_ID="<application_id_to_controll_access>"
-export NODE_BALANCER_CONTROLLER_TOKEN="<token_of_controller_user>"
-export NODE_BALANCER_CONTROLLER_ACCESS_ID="<controller_access_id_for_internal_crawlers>"
+export NB_APPLICATION_ID="<application_id_to_controll_access>"
+export NB_CONTROLLER_TOKEN="<token_of_controller_user>"
+export NB_CONTROLLER_ACCESS_ID="<controller_access_id_for_internal_crawlers>"
 
 # Database variables
 export MOONSTREAM_DB_URI="postgresql://<username>:<password>@<db_host>:<db_port>/<db_name>"
