--- a/crawlers/deploy/polygon-txpool.service
+++ b/crawlers/deploy/polygon-txpool.service
@@ -7,7 +7,7 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/txpool
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream/crawlers/txpool/txpool -blockchain polygon
+ExecStart=/home/ubuntu/moonstream/crawlers/txpool/txpool -blockchain polygon -access-id "${NB_CONTROLLER_ACCESS_ID}"
 SyslogIdentifier=polygon-txpool
 
 [Install]
