Add fix of directory name.

--- a/.github/workflows/lint.db.yml
+++ b/.github/workflows/lint.db.yml
@@ -26,9 +26,9 @@ jobs:
         working-directory: ./db
         run: |
             mypy --version
-            mypy db/
+            mypy moonstreamdb/
       - name: Black syntax check
         working-directory: ./db
         run: | 
             black --version
-            black --check db/
+            black --check moonstreamdb/
