--- a/crawlers/deploy/polygon-synchronize.service
+++ b/crawlers/deploy/polygon-synchronize.service
@@ -11,7 +11,9 @@ User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/moonstream/crawlers/mooncrawl
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler blocks synchronize --blockchain polygon -c 60 -j 2
+ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler \
+    --access-id "${NB_CONTROLLER_ACCESS_ID}" \
+    blocks synchronize --blockchain polygon -c 60 -j 2
 SyslogIdentifier=polygon-synchronize
 
 [Install]
