--- a/crawlers/deploy/ethereum-trending.service
+++ b/crawlers/deploy/ethereum-trending.service
@@ -11,4 +11,5 @@ EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler \
     --access-id "${NB_CONTROLLER_ACCESS_ID}" \
     trending
+CPUWeight=30
 SyslogIdentifier=ethereum-trending
