--- a/crawlers/deploy/polygon-missing.service
+++ b/crawlers/deploy/polygon-missing.service
@@ -11,4 +11,5 @@ EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler \
     --access-id "${NB_CONTROLLER_ACCESS_ID}" \
     blocks missing --blockchain polygon -n
+CPUWeight=50
 SyslogIdentifier=polygon-missing
