--- a/crawlers/deploy/polygon-txpool.service
+++ b/crawlers/deploy/polygon-txpool.service
@@ -14,6 +14,7 @@ RestartSec=15s
 ExecStart=/home/ubuntu/moonstream/crawlers/txpool/txpool \
     -blockchain polygon \
     -access-id "${NB_CONTROLLER_ACCESS_ID}"
+CPUWeight=30
 SyslogIdentifier=polygon-txpool
 
 [Install]
