--- a/crawlers/deploy/xdai-synchronize.service
+++ b/crawlers/deploy/xdai-synchronize.service
@@ -14,6 +14,7 @@ EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
 ExecStart=/home/ubuntu/moonstream-env/bin/python -m mooncrawl.crawler \
     --access-id "${NB_CONTROLLER_ACCESS_ID}" \
     blocks synchronize --blockchain xdai -c 60 -j 2
+CPUWeight=90
 SyslogIdentifier=xdai-synchronize
 
 [Install]
