Service file of moonstreamdb for new db

--- a/db/.gitignore
+++ b/db/.gitignore
@@ -160,6 +160,9 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 
+# Custom
+moonstreamdb
+
 # Envionments
 .moonstream/
 .moonstreamdb/
