--- a/db/deploy/moonstreamdb.service
+++ b/db/deploy/moonstreamdb.service
@@ -1,13 +1,18 @@
 [Unit]
-Description=moonstreamdb-service
+Description=Status service of moonstreamdb server
+StartLimitIntervalSec=300
+StartLimitBurst=3
 After=network.target
 
 [Service]
-User=ubuntu
-Group=www-data
-WorkingDirectory=/home/ubuntu/moonstream/db/server
-EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/home/ubuntu/moonstream/db/server/moonstreamdb -host 127.0.0.1 -port "${MOONSTREAM_DB_SERVER_PORT}"
+Restart=on-failure
+RestartSec=15s
+WorkingDirectory=/home/moonstream
+EnvironmentFile=/home/moonstream/moonstream-secrets/app.env
+ExecStart=/home/moonstream/moonstreamdb -host 0.0.0.0 -port "${MOONSTREAM_DB_SERVER_PORT}"
+CPUWeight=20
+CPUQuota=15%
+IOWeight=20
 SyslogIdentifier=moonstreamdb
 
 [Install]
