Add timeout for bugout in crawlers.

--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -1,6 +1,7 @@
 # Bugout environment variables
 export BUGOUT_BROOD_URL="https://auth.bugout.dev"
 export BUGOUT_SPIRE_URL="https://spire.bugout.dev"
+export BUGOUT_REQUEST_TIMEOUT=30
 export HUMBUG_REPORTER_CRAWLERS_TOKEN="<Bugout_Humbug_token_for_crash_reports>"
 
 # Moonstream environment variables
