Updating lint settings for 'jsx' and 'global' property lint issue.

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -91,7 +91,16 @@
     ],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "prettier/prettier": "warn"
+    "prettier/prettier": "warn",
+    "react/no-unknown-property": [
+      2,
+      {
+        "ignore": [
+          "jsx",
+          "global"
+        ]
+      }
+    ]
   }
 }
 
