Lighthouse eth node service

--- a/nodes/deploy/ethereum/geth.service
+++ b/nodes/deploy/ethereum/geth.service
@@ -6,15 +6,9 @@ After=network.target
 
 [Service]
 Restart=on-failure
-RestartSec=5s
+RestartSec=10s
 EnvironmentFile=/home/ubuntu/moonstream-secrets/app.env
-ExecStart=/usr/bin/geth --syncmode snap --cache 4096 \
-    --datadir /mnt/disks/nodes/ethereum \
-    --txpool.globalslots 153600 --txpool.globalqueue 3072 \
-    --http --http.api eth,web3,txpool \
-    --http.addr "${AWS_LOCAL_IPV4}" \
-    --http.port 8545 \
-    --http.vhosts "*"
+ExecStart=/usr/bin/geth --syncmode snap --cache 4096 --datadir /mnt/disks/nodes/ethereum --txpool.globalslots 153600 --txpool.globalqueue 3072 --http --http.api eth,web3,txpool --http.addr "${AWS_LOCAL_IPV4}" --http.port 8545 --http.vhosts "*" --authrpc.jwtsecret /home/ubuntu/moonstream-secrets/jwt.hex
 Type=simple
 User=ubuntu
 ExecStop=/bin/kill -s SIGINT -$MAINPID
