--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -13,6 +13,7 @@ export MOONSTREAM_HUMBUG_TOKEN="<Token_for_crawlers_store_data_via_Humbug>"
 export MOONSTREAM_DATA_JOURNAL_ID="<Bugout_journal_id_for_moonstream>"
 export MOONSTREAM_MOONWORM_TASKS_JOURNAL="<journal_with_tasks_for_moonworm_crawler>"
 export MOONSTREAM_ADMIN_ACCESS_TOKEN="<Bugout_access_token_for_moonstream>"
+export MOONSTREAM_QUERIES_JOURNAL_ID="<bugout_journal_id_where_store_queries_for_executing>"
 export NFT_HUMBUG_TOKEN="<Token_for_nft_crawler>"
 
 # Blockchain nodes environment variables
@@ -27,6 +28,8 @@ export MOONSTREAM_S3_SMARTCONTRACTS_BUCKET="<AWS_S3_bucket_for_smart_contracts>"
 export MOONSTREAM_S3_SMARTCONTRACTS_ABI_PREFIX="<Previx_for_AWS_S3_bucket_(prod,dev,..)>"
 export MOONSTREAM_S3_QUERIES_BUCKET="<AWS_S3_bucket_to_store_sql_queries>"
 export MOONSTREAM_S3_QUERIES_BUCKET_PREFIX="dev"
+export MOONSTREAM_S3_DATA_BUCKET="<AWS_S3_bucket_to_store_data>"
+export MOONSTREAM_S3_DATA_BUCKET_PREFIX="dev"
 
 # 3rd parties environment variables
 export MOONSTREAM_ETHERSCAN_TOKEN="<Token_for_etherscan>"
