Fix release client library github action

--- a/.github/workflows/release.clients.python.yml
+++ b/.github/workflows/release.clients.python.yml
@@ -1,8 +1,9 @@
 name: Publish Moonstream Python client library
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "clients/python/v*"
 
 defaults:
   run:
