Add requested fixes:
1) CUSTOM_CRAWLER_S3_BUCKET -> MOONSTREAM_S3_PUBLIC_DATA_BUCKET_PREFIX
2) Add overwrite for init queries handlers
3) Add sleep

--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -34,5 +34,5 @@ export COINMARKETCAP_API_KEY="<API_key_to_parse_conmarketcap>"
 
 
 # Custom crawler
-export CUSTOM_CRAWLER_S3_BUCKET="<public_bucket>"
-export CUSTOM_CRAWLER_S3_BUCKET_PREFIX="<prefix>"
+export MOONSTREAM_S3_PUBLIC_DATA_BUCKET="<public_bucket>"
+export MOONSTREAM_S3_PUBLIC_DATA_BUCKET_PREFIX="dev"
