Add MOONSTREAM_PUBLIC_QUERIES_DATA_ACCESS_TOKEN for run queries for public dashboard.

--- a/crawlers/mooncrawl/sample.env
+++ b/crawlers/mooncrawl/sample.env
@@ -36,3 +36,4 @@ export COINMARKETCAP_API_KEY="<API_key_to_parse_conmarketcap>"
 # Custom crawler
 export MOONSTREAM_S3_PUBLIC_DATA_BUCKET="<public_bucket>"
 export MOONSTREAM_S3_PUBLIC_DATA_BUCKET_PREFIX="dev"
+export MOONSTREAM_PUBLIC_QUERIES_DATA_ACCESS_TOKEN="<access token for run queries for public dashboards>"
